correct war construction process.

--- a/modules/dspace-srw/trunk/pom.xml
+++ b/modules/dspace-srw/trunk/pom.xml
@@ -64,6 +64,9 @@
             </configuration>
             <executions>
                <execution>
+                  <goals>
+                     <goal>war</goal>
+                  </goals>
                   <phase>prepare-package</phase>
                </execution>
             </executions>
