--- a/modules/dspace-srw/trunk/pom.xml
+++ b/modules/dspace-srw/trunk/pom.xml
@@ -49,6 +49,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-war-plugin</artifactId>
             <configuration>
+               <primaryArtifact>false</primaryArtifact>
                <classifier>webapp</classifier>
                <archiveClasses>true</archiveClasses>
                <warSourceExcludes>WEB-INF/lib/*.jar</warSourceExcludes>
