--- a/modules/dspace-srw/trunk/src/main/webapp/WEB-INF/web.xml
+++ b/modules/dspace-srw/trunk/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,16 @@
     <param-name>dspace-config</param-name>
     <param-value>${dspace.dir}/config/dspace.cfg</param-value>
   </context-param>
-  
+
+  <!-- 
+     Listener to initialise DSpace configuration and clean up the application 
+  -->
+  <listener>
+     <listener-class>
+        org.dspace.app.util.DSpaceContextListener
+     </listener-class>
+  </listener>
+
   <servlet>
     <servlet-name>SRWServlet</servlet-name>
     <servlet-class>
@@ -20,7 +29,7 @@
     </servlet-class>
     <!--init-param>
       <param-name>PropertiesFile</param-name>
-      <param-value>webapps/SRW/SRWServer.propss</param-value>
+      <param-value>webapps/SRW/SRWServer.props</param-value>
     </init-param-->
     <!--load-on-startup>100</load-on-startup-->
   </servlet>
