--- a/modules/dspace-rdf/trunk/pom.xml
+++ b/modules/dspace-rdf/trunk/pom.xml
@@ -1,7 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
       <artifactId>dspace-parent</artifactId>
       <groupId>org.dspace</groupId>
@@ -10,6 +7,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.dspace</groupId>
    <artifactId>dspace-rdf</artifactId>
+  <version>1.5.1</version>
    <name>DSpace RDF generation support</name>
    <description>
       A combination of OpenRDF model and SAX Content Handlers available
@@ -23,9 +21,9 @@
       into the snapshot repository below.
    -->
    <scm>
-      <connection>scm:svn:http://dspace-sandbox.googlecode.com/svn/modules/dspace-rdf/trunk</connection>
-      <developerConnection>scm:svn:https://dspace-sandbox.googlecode.com/svn/modules/dspace-rdf/trunk</developerConnection>
-      <url>http://dspace-sandbox.googlecode.com/svn/modules/dspace-rdf/trunk</url>
+      <connection>scm:svn:http://dspace-sandbox.googlecode.com/svn/modules/dspace-rdf/tags/dspace-rdf-1.5.1</connection>
+      <developerConnection>scm:svn:https://dspace-sandbox.googlecode.com/svn/modules/dspace-rdf/tags/dspace-rdf-1.5.1</developerConnection>
+      <url>http://dspace-sandbox.googlecode.com/svn/modules/dspace-rdf/tags/dspace-rdf-1.5.1</url>
    </scm>
    
    <repositories>
@@ -64,7 +62,7 @@
       <dependency>
          <groupId>org.dspace</groupId>
          <artifactId>dspace-api</artifactId>
-         <version>${version}</version>
+         <version>1.5.1</version>
       </dependency>
       <dependency>
          <groupId>org.openrdf</groupId>
