--- a/modules/dspace-rdf/trunk/pom.xml
+++ b/modules/dspace-rdf/trunk/pom.xml
@@ -7,7 +7,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.dspace</groupId>
    <artifactId>dspace-rdf</artifactId>
-  <version>1.5.1</version>
+  <version>1.5.2-SNAPSHOT</version>
    <name>DSpace RDF generation support</name>
    <description>
       A combination of OpenRDF model and SAX Content Handlers available
@@ -21,9 +21,9 @@
       into the snapshot repository below.
    -->
    <scm>
-      <connection>scm:svn:http://dspace-sandbox.googlecode.com/svn/modules/dspace-rdf/tags/dspace-rdf-1.5.1</connection>
-      <developerConnection>scm:svn:https://dspace-sandbox.googlecode.com/svn/modules/dspace-rdf/tags/dspace-rdf-1.5.1</developerConnection>
-      <url>http://dspace-sandbox.googlecode.com/svn/modules/dspace-rdf/tags/dspace-rdf-1.5.1</url>
+      <connection>scm:svn:http://dspace-sandbox.googlecode.com/svn/modules/dspace-rdf/trunk</connection>
+      <developerConnection>scm:svn:https://dspace-sandbox.googlecode.com/svn/modules/dspace-rdf/trunk</developerConnection>
+      <url>http://dspace-sandbox.googlecode.com/svn/modules/dspace-rdf/trunk</url>
    </scm>
    
    <repositories>
@@ -62,7 +62,7 @@
       <dependency>
          <groupId>org.dspace</groupId>
          <artifactId>dspace-api</artifactId>
-         <version>1.5.1</version>
+         <version>1.5.2-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>org.openrdf</groupId>
