--- a/modules/dspace-srw/trunk/pom.xml
+++ b/modules/dspace-srw/trunk/pom.xml
@@ -11,7 +11,7 @@
  	<parent>
 		<groupId>org.dspace</groupId>
 		<artifactId>dspace-parent</artifactId>
-		<version>1.5.1-SNAPSHOT</version>
+		<version>1.5.2-SNAPSHOT</version>
 	</parent>
 
 	<scm>
@@ -49,7 +49,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-war-plugin</artifactId>
             <configuration>
-               <primaryArtifact>false</primaryArtifact>
+               <primaryArtifact>true</primaryArtifact>
                <classifier>webapp</classifier>
                <archiveClasses>true</archiveClasses>
                <warSourceExcludes>WEB-INF/lib/*.jar</warSourceExcludes>
