--- a/modules/dspace-srw/trunk/pom.xml
+++ b/modules/dspace-srw/trunk/pom.xml
@@ -66,7 +66,7 @@
 						<goals>
 							<goal>war</goal>
 						</goals>
-						<phase>prepare-package</phase>
+						<phase>package</phase>
 					</execution>
 				</executions>
 			</plugin>
