add ds.DSpace.home param to SRW Server.props file

--- a/modules/dspace-srw/trunk/src/main/webapp/WEB-INF/classes/SRWServer.props
+++ b/modules/dspace-srw/trunk/src/main/webapp/WEB-INF/classes/SRWServer.props
@@ -53,3 +53,6 @@ db.test.class=ORG.oclc.os.SRW.SRWTestDatabase
 
 db.DSpace.class=ORG.oclc.os.SRW.DSpaceLucene.SRWLuceneDatabase
 db.DSpace.configuration=config/DSpace.SRWDatabase.props
+
+#this param violates local dspace policy for deployment locations, but ...
+db.DSpace.home=/home/dspace/dome.mit.edu
